css/styles.css
@import url('/css/variables.css');

body {
    margin: 0;
    display: grid;
    height: 100vh;
    width: 100vw;
    grid-template-rows:
        minmax(min-content, 20%) minmax(min-content, 45%) minmax(
            min-content,
            15%
        )
        minmax(min-content, 20%);
    grid-template-columns: 15% 70% 15%;
    grid-template-areas: 'header header header' 'navigation main right-aside' 'navigation middle-aside right-aside' 'footer footer right-aside';
}

header,
nav,
main,
.middle-aside,
.right-aside,
footer {
    padding: 2%;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--header-background);
    grid-area: header;
}

nav {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    background-color: var(--navigation-background);
    grid-area: navigation;
    padding: 15%;
}

nav a {
    text-transform: uppercase;
    text-decoration: none;
    color: inherit;
}

nav a:hover {
    text-decoration: underline;
    transition: 0.3s;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--main-background);
    grid-area: main;
}

.middle-aside {
    background-color: var(--middle-aside-background);
    grid-area: middle-aside;
}

.right-aside {
    background-color: var(--right-aside-background);
    grid-area: right-aside;
}

footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--footer-background);
    grid-area: footer;
}

main img {
    margin: auto;
    width: 35%;
    height: auto;
}

.big-image {
    margin: auto;
    width: 60%;
    height: auto;
}

